--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,17 +25,6 @@ jobs:
       run:  pip install -r requirements.txt
 
 
-    - name: 🔐 Login to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: 🏗️ Build and push Docker image
-      env:
-        IMAGE_NAME: ghcr.io/${{ github.repository }}
+    - name: 🏗️ Build Docker image
       run: |
-        IMAGE_NAME_LOWER=$(echo "$IMAGE_NAME" | tr '[:upper:]' '[:lower:]')
-        docker build -t "$IMAGE_NAME_LOWER:latest" .
-        docker push "$IMAGE_NAME_LOWER:latest"
+        docker build -t test-image .
